--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body,html{
   width: 100%;
-  height: 100%px;
+  height: 100%;
   background: url('3.jpg') no-repeat center center fixed;
   background-size:cover;
 }
